# zygisk-virtualizer

./: .gitattributes  .gitignore  AGENTS.md  Android.mk  Application.mk  CHANGELOG.md  CMakeLists.txt  Cargo.toml  README.md  action.sh  customize.sh  module.prop  post-fs-data.sh  seccomp_engine.cpp  sepolicy.rule  service.sh  uninstall.sh  update.json  virtualizer.h  virtualizer_core.cpp  virtualizer_init.rc  zygisk_entry.cpp
.cargo/: config.toml
.github/workflows/: build.yml  codeql.yml  dependency-review.yml  release.yml
kernel/: Makefile  README.md  virtualizer_kern.c
src/: core.rs  lib.rs  seccomp.rs
tests/: Makefile  run_tests.sh  test_compat.h  test_stubs.cpp
tests/android/: log.h
tests/integration/: test_handler.py
tests/linux/: audit.h  filter.h  sched.h  seccomp.h  types.h  unistd.h
tests/sys/: eventfd.h  inotify.h  prctl.h  signalfd.h  timerfd.h
tests/unit/: test_cache  test_cache.cpp  test_config  test_config.cpp  test_features  test_features.cpp  test_mask  test_mask.cpp  test_mem  test_mem.cpp  test_proc_hider  test_proc_hider.cpp  test_rules  test_rules.cpp  test_signal  test_signal.cpp  test_stats  test_stats.cpp  test_trie  test_trie.cpp
tests/unit/test_cache.dSYM/Contents/Resources/DWARF/: test_cache
tests/unit/test_config.dSYM/Contents/Resources/DWARF/: test_config
tests/unit/test_proc_hider.dSYM/Contents/: Info.plist
tests/unit/test_stats.dSYM/Contents/: Info.plist
tests/unit/test_trie.dSYM/Contents/: Info.plist
webui/: index.html  javascript.js  style.css
workflows/: build.yml  codeql.yml
(+10 files in other folders)
